Updated soruce code with proper colors support

--- a/src/main.lfm
+++ b/src/main.lfm
@@ -7,15 +7,15 @@ object MainForm: TMainForm
   ClientHeight = 367
   ClientWidth = 679
   OnCreate = FormCreate
+  OnShow = FormShow
   Position = poScreenCenter
-  LCLVersion = '1.5'
   object DrawList: TDrawList
     Left = 360
-    Height = 256
-    Top = 32
+    Height = 224
+    Top = 64
     Width = 248
     BorderStyle = bsSingle
-    Color = clWhite
+    Color = clWindow
     DesktopFont = True
     HotTrack = False
     ItemHeight = 28
@@ -27,17 +27,17 @@ object MainForm: TMainForm
   end
   object PreviewLabel: TLabel
     Left = 8
-    Height = 19
+    Height = 16
     Top = 8
-    Width = 62
+    Width = 50
     Caption = 'Preview:'
     ParentColor = False
   end
   object FontsLabel: TLabel
     Left = 360
-    Height = 19
+    Height = 16
     Top = 8
-    Width = 110
+    Width = 94
     Caption = 'Available fonts:'
     ParentColor = False
     ParentFont = False
@@ -54,7 +54,7 @@ object MainForm: TMainForm
     ClientWidth = 342
     Color = clBtnFace
     ParentColor = False
-    TabOrder = 1
+    TabOrder = 2
     UseDockManager = False
     object RenderBox: TRenderBox
       Left = 0
@@ -68,6 +68,7 @@ object MainForm: TMainForm
   object BoldButton: TThinButton
     Left = 304
     Height = 24
+    Hint = 'Bold'
     Top = 3
     Width = 24
     Caption = 'BoldButton'
@@ -75,10 +76,13 @@ object MainForm: TMainForm
     Images = ImageStrip
     ImageIndex = 0
     OnClick = FontButtonClick
+    ShowHint = True
+    ParentShowHint = False
   end
   object ItalicButton: TThinButton
     Left = 328
     Height = 24
+    Hint = 'Italic'
     Top = 3
     Width = 24
     Caption = 'ItalicButton'
@@ -86,6 +90,8 @@ object MainForm: TMainForm
     Images = ImageStrip
     ImageIndex = 1
     OnClick = FontButtonClick
+    ShowHint = True
+    ParentShowHint = False
   end
   object BitmapButton: TThinButton
     Left = 272
@@ -99,45 +105,72 @@ object MainForm: TMainForm
     Visible = False
     OnClick = BitmapButtonClick
   end
+  object FontEdit: TEdit
+    Left = 360
+    Height = 27
+    Top = 32
+    Width = 248
+    ReadOnly = True
+    TabOrder = 1
+  end
   object Timer: TTimer
     Enabled = False
     Interval = 500
     OnTimer = TimerTimer
-    left = 56
-    top = 296
+    Left = 56
+    Top = 296
   end
   object ImageStrip: TImageStrip
-    left = 256
-    top = 304
+    Left = 120
+    Top = 296
     Data = {
       89504E470D0A1A0A0000000D494844520000003000000010080600000050AEFC
-      B10000000473424954080808087C08648800000326494441544889A5D63D885D
-      451407F0DF7D2F59134DC4E70742F003236AE147244802A61131855A48C0D24A
-      10B5D4450BB1120441228A856227C1C642051B511B8B60218A269AA028318BA0
-      1BCDDB5513753FDEBB167326F7EEE4DE5DC13F5CCECC9D33E76BCE393315CE60
-      8A05D41A8C308CF1127EC6497C843783BF2AF60C42D655F80E5B5BEB1516436E
-      89524E89417CAB257F856770119EC4966098E0659C0E8577625F6CAAF023EEC3
-      F11E43B68513F7E2257C818763ED4887811F860D67627E418C1F9102B70FCFB7
-      9CF827F49FC308E35050E36F5C136B9B823EDD5AABA593E843DEF354F0BE56FC
-      2F31C26C4BFF2C2EC54CAC6FC5667C80B77061DE386809AE5A02072D65991EC2
-      59CD29EDC68E1E83723ADC11F4AB425F89051C6ECD8F4A019DC47C25BE23F803
-      7F950EAC3A1F7541A7F165F4E56D158A2BDC1CFFBE0E3AE9E0EF42DF498D1535
-      D41791BAA52C1B7D00DBB11CF38FA5FC2C914F72076E90A2F57D4B6E1FA6EBAC
-      E57DF39AB442BFA743DC1F068EA4227A48726A1EEFE3D99EBDD9811B43D931FC
-      F21F8C6C63A6E7FFA2540BE7D0E5401DFF5F69F164A34E4BC61F94F276E8FCB4
-      C8BCB7043D1AB48BB7D49BB1AD90953155644D570A55529AEC925ADB95B80B9F
-      E2323C8A1FF07A8782B621B707FDB2C798124BADBDDB7B782E0EBE751DC8469C
-      952A7F8C4FA49E7E428AE48AE4C8C18EBD39CAB706CD27B05EFE93527321C63B
-      836E6A7DB007735D9B479A9BB8962E8A6B636D285D2CF06AAC2F071D17727294
-      2FC7EF5277CB72FA82D55E7B27E49ED0B4E8FC1AD88B5F715B7B635F11B3B68D
-      E6A82E168696473D08DEEBA5E3FE163F15F2BA3094F2FB095C27A5DF71BC8753
-      523BDE8DC7A5BB604674C3F2B2CAA87AD66E2A8C99EF3064A229E06331DFA880
-      57829E0C43F7E26E5C1DB61CC283524BCE35BAC6B8556B2334D55C6E79BC1F0F
-      58DB09DE280CC96D7257D0CF836E54C007340FB6A9947E87635C4B01D82FBD02
-      56E3FFBBD98159A96D6D6909DC8CC7F01B2E918AE71E4D3ED67801CF1586EC0C
-      E17B62FEA7F4A61A6B1E6A5D78316CC98FC56107CFA4B53EC90E5452C16EF49C
-      5E96AA7F0E9FE16D7CA38958C6295C51C85992526FAE83FF7FE35FD23CD7D812
-      1D70510000000049454E44AE426082
+      B10000000473424954080808087C0864880000057B494441544889AD564B2C6B
+      5D145EBBA70FD512C7231229A2727550541A69139D88E8000391181A49A40C69
+      1888914422910A312066D2981820E9443031100321D42B84D0465245CF29AAFA
+      DA7BFF03F6FDCF3D7FB993FF9BF4B1F75AFB5BEF8562B1588C104244511429A5
+      14BEC0F33CCF711C0700904C2693A15028140804025B5B5B5B4B4B4B4BA2288A
+      082124955128140A420831180C86ABABAB2BAD56AB65E70821148D46A33CCFF3
+      20835C8F1C8A2F6432998CFC3E1A1D1D1DD5E974BAA1A1A1A19C9C9C1C00008C
+      319E999999894422119EE7F9A6A6A62687C3E1A094528410BABBBBBB6B6F6F6F
+      BFB8B8B8C84644AFD7EB0D0683A1ADADAD6D7A7A7AFAF0F0F0B0B7B7B797524A
+      FD7EBF5F4E7073737353A7D3E962B1580C0040A3D16862B158ACAFAFAF2F140A
+      851C0E8763626262821991482412EDEDEDEDBF15F03CCF0B8220D02F7C7C7C7C
+      54545454000028954A2500C0C8C8C8083BA394D2ADADADADEF3CC66486878787
+      29A5747E7E7E5EFABF1C3CCFF36EB7DBCDDE77BBDDEEC2C2C242B55AAD0600D0
+      6AB55A954AA5DAD8D8D8585E5E5ECECDCDCDFD1D1DA6182184A421638FB14FAF
+      D7EB7D7F7F7F6751B25AADD6B2B2B2B26C8458781B1B1B1B01008E8F8F8F99DE
+      6CF745511477777777D9EF939393134110048C310600487FC1EFF7FB5F5F5F5F
+      E3F178FC0F03586E6523C13EC917D8F977798B104218638C104266B3D90C0070
+      7A7A7A0AF0999AD90C90E3BB48098220C86B28AB4728A5943DC64877757575E5
+      E5E5E5A552A91400C0F6F6F67628140A65330000A0ACACACECD7AF5FBFE2F178
+      FCFAFAFA9AE9FD8EB4D439D9F8000084C3E1304BABDFC66613E0388EEBE8E8E8
+      088542219EE77987C3E1E8E9E9E9C118E370381CF6F97CBEB1B1B1B16CB2CC80
+      9A9A9A1AB55AAD3E3F3F3F7F787878F81B4929E42419A2D16854A552A97E3480
+      524A954AA57276767616E0CFFA884422119FCFE7F3783C1E5114458EE338795A
+      B0BBB5B5B5B5009FF9CC9CF2530A49A3A3D7EBF5525D0C841022AFA3FFA41042
+      08A552A994C562B1E8743A5D69696969737373F3DEDEDE5E51515191CBE572DD
+      DCDCDC2C2C2C2CC81F9012696868680000383A3A3ACA46468E64329964B27979
+      7979D9EEE4E7E7E72793C9E48F063012EFEFEFEFE9743A2D0882B0B3B3B3D3D6
+      D6D6767B7B7BCB711C974EA7D32E97CBE5F1783C7259E6E5BABABA3A807F23F0
+      53FE037CE6B7288A220080D16834027C469F0100C066B3D982C160F03FC23CCF
+      F36C12534A6922914854565656027C865EA3D1680000E6E6E6E628A534954AA5
+      28A554100441AA8779B9B8B8B8F8E5E5E52593C964989EEF5AA8F46C75757595
+      524A6F6F6F6F598B66DB80DD6EB73F3D3D3DD5D7D7D74B65B316B1D463D28E14
+      8D46A352A2F2502B140A05C61857575757E7E7E7E75F5E5E5EDEDFDFDF4BF565
+      03C7711C21840C0E0E0E56555555353434345C5C5C5CACAFAFAF3F3E3E3E9ACD
+      66B3D56AB50E0C0C0CF8FD7EBF5AAD56B36EF8C7B0927A523EC800004C269349
+      4A261C0E87E54430C69815F0F9F9F939C618FFAD80D3E9741A0020100804AC56
+      ABD56EB7DB5B5A5A5ACACBCBCB1142C8EBF57ABBBBBBBBE3F1789CD528935502
+      7C0E32A9870821840D37F6DDE9743A3B3B3B3BA59D60717171514A84B5498BC5
+      62010038383838600EF98E3CC0E78C610B1B2184BCBCBCBCECEEEEEE124208A5
+      94721CC7399D4E674E4E4E4E2693C91042C8DADADA1A0080D2ED76BBF57ABD9E
+      AD0800002A954AD5DFDFDFFFFCFCFC5C50505060B3D96CADADADAD2C1F29A574
+      727272727C7C7C5C4AC468341A0921C466B3D90000DEDEDEDE2A2A2A2A044110
+      D8A2960D535353534AA552C99645F68E141863CCCE31C6981980128944E26FEB
+      742A954A05BFB0BFBFBFBFB2B2B272767676C63CC6641E1F1F1F4B4A4A4AA47A
+      92C964D264329982C160507EFFFFC03FD9995F1B7EADF3EB0000000049454E44
+      AE426082
     }
   end
 end
